<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/thank_you_singup"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@mipmap/fitness_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/text_confirmation"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/backToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="10dp"
            android:text="@string/back_login"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resendConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="10dp"
            android:text="@string/resend_btn"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/resend_email"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>