<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textview_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/age_icon"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/birth_date"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/user_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/height_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/height_signup"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioGroup
                android:id="@+id/radio_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/radio_language_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_language"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/english"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/french_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/french"
                    android:textColor="@color/white" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/radio_language"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/selectLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_select"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/gender_male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/gender_female"
                    android:textColor="@color/white" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/doneRegistering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/doneRegistering"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="@string/back_signup"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>