<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:padding="20dp">

        <TextView
            android:id="@+id/history_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/display_graph"
            android:textColor="@color/white_greyish"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:padding="5dp"
        android:layout_below="@id/history_text"
        android:orientation="horizontal"
        android:id="@+id/layout_buttons">

            <Button
                android:id="@+id/display_hr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="10dp"
                android:text="@string/heart_rate"
                android:textColor="@color/background_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:drawableBottom="@drawable/heart_rate"/>


            <Button
                android:id="@+id/display_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="10dp"
                android:text="@string/workout_duration"
                android:textColor="@color/background_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:drawableBottom="@drawable/time_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/no_workout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no_registered_workout"
            android:textColor="@color/white_greyish"
            android:textSize="21sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_below="@id/layout_buttons"/>

        <TextView
            android:id="@+id/hr_graph_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hr_graph_text"
            android:textColor="@color/white_greyish"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_below="@id/layout_buttons"
            android:visibility="invisible"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/heartrate_graph"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_below="@id/hr_graph_text"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/duration_text"
            android:textColor="@color/white_greyish"
            android:textSize="21sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_below="@id/layout_buttons"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/duration_graph"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:visibility="invisible"
            android:layout_below="@id/duration_text"/>

        <TextView
            android:id="@+id/duration_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/duration_instruction"
            android:textColor="@color/white_greyish"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/duration_graph"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/hr_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hr_instruction"
            android:textColor="@color/white_greyish"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/heartrate_graph"
            android:visibility="invisible"/>

    </RelativeLayout>
</ScrollView>