<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:padding="5dp"
            android:orientation="vertical"
            android:id="@+id/layout_graph">

            <TextView
                android:id="@+id/ortho_hr_graph_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/hr_ortho_label"
                android:textColor="@color/white_greyish"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_below="@id/layout_buttons" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/ortho_heartrate_graph"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_below="@id/hr_graph_text" />

            <Button
                android:id="@+id/go_to_questionnaire_from_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="10dp"
                android:textColor="@color/background_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="2dp"
                android:text="@string/go_to_questionnaire" />

            <TextView
                android:id="@+id/warning_to_go_to_questionnaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white_greyish"
                android:textSize="21sp"
                android:textStyle="bold"
                android:text="@string/questionnaire_warning" />


        </LinearLayout>



</ScrollView>